<?xml version="1.0" encoding="utf-8"?>
<layout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.sellerProduct.SellerProductActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.github.florent37.shapeofview.shapes.RoundRectView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/productGridBackgroundColor"
                app:shape_roundRect_borderColor="@android:color/white"
                app:shape_roundRect_bottomLeftRadius="10dp"
                app:shape_roundRect_bottomRightRadius="10dp"
                app:shape_roundRect_topLeftRadius="10dp"
                app:shape_roundRect_topRightRadius="10dp">

                <com.smarteist.autoimageslider.SliderLayout
                    android:id="@+id/imageSlider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.github.florent37.shapeofview.shapes.RoundRectView>


            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="200dp"
                android:text="@string/productname"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_location"
                    android:layout_marginEnd="10dp" />

                <TextView
                    android:id="@+id/sellerLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="200dp"
                    android:text="@string/seller_location"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <!-- YOUR CONTENT -->

            <com.github.florent37.shapeofview.shapes.CutCornerView
                android:id="@+id/clipCorner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:shape_cutCorner_bottomLeftSize="20dp"
                app:shape_cutCorner_bottomRightSize="20dp"
                app:shape_cutCorner_topLeftSize="20dp"
                app:shape_cutCorner_topRightSize="20dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buyNowBtn"
                    style="@style/AppTheme.primaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/buy_now"
                    android:textSize="20sp" />
            </com.github.florent37.shapeofview.shapes.CutCornerView>

            <com.github.florent37.shapeofview.shapes.CutCornerView
                android:id="@+id/clipCornerCart"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:shape_cutCorner_bottomLeftSize="20dp"
                app:shape_cutCorner_bottomRightSize="20dp"
                app:shape_cutCorner_topLeftSize="20dp"
                app:shape_cutCorner_topRightSize="20dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addToCartButton"
                    style="@style/AppTheme.primaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/add_to_cart"
                    android:textSize="20sp" />
            </com.github.florent37.shapeofview.shapes.CutCornerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/rating_bar_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:stepSize="1.0" />
        </LinearLayout>


    </LinearLayout>
</layout>