<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/animation_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:visibility="gone"
            android:layout_centerInParent="true"
            >
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view_text"
                android:layout_width="match_parent"
                android:layout_height="200dp"


                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/animation_loading_text"
                />

            <com.airbnb.lottie.LottieAnimationView

                android:id="@+id/animation_view"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                app:lottie_rawRes="@raw/animation_loading"

                app:lottie_loop="true"
                app:lottie_autoPlay="true" />
        </LinearLayout>

        <include
            android:id="@+id/progress_bar_layout"
            layout="@layout/circle_progressbar" />

        <RelativeLayout
        android:id="@+id/main_layout"
        style="@style/Platform.MaterialComponents.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/curve_background_secondary_color"
        android:orientation="vertical"
        android:visibility="visible">
        <LinearLayout
            style="@style/Widget.Shrine.Backdrop"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="100dp"
            android:paddingBottom="100dp" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                style="@style/Widget.Shrine.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center"
                android:tooltipText="back"
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                app:title="order conformation"
                />
        </com.google.android.material.appbar.AppBarLayout>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/appbarlayout"
            android:background="@drawable/curve_background_secondary_color">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_3"
                            android:background="@color/productGridBackgroundColor"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="2dp">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:id="@+id/address_layout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">


                                    <TextView
                                        android:id="@+id/address_name_tv"
                                        style="@style/TextAppearance.MaterialComponents.Headline5"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/dp_6"
                                        tools:text="home" />

                                    <TextView
                                        android:id="@+id/address_location"
                                        style="@style/TextAppearance.MaterialComponents.Body1"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/dp_6"
                                        tools:text="102,h,browun avenue maple county 2, thaltej ahmedabad,-380058" />

                                </LinearLayout>

                                <TextView
                                    style="@style/TextAppearance.MaterialComponents.Headline6"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/dp_6"
                                    android:text="@string/shipping_details"
                                    android:textAllCaps="true" />


                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="3dp"
                                    android:background="@drawable/curve_background_secondary_color" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="2dp"
                                    android:background="?attr/dividerHorizontal" />

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/order_address_button"
                                    style="@style/Widget.MaterialComponents.Button.TextButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@string/select_or_change_address" />
                            </LinearLayout>


                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/dp_3"
                            android:background="@color/productGridBackgroundColor"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="2dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        style="@style/TextAppearance.MaterialComponents.Headline6"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/dp_6"
                                        android:text="payment methods"
                                        android:textAllCaps="true" />

                                    <View
                                        android:layout_width="match_parent"
                                        android:layout_height="2dp"
                                        android:background="?attr/dividerHorizontal" />

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/dp_24">

                                        <ImageView
                                            android:id="@+id/payment_method_icon"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:src="@drawable/ic_cash" />

                                        <TextView
                                            android:id="@+id/payment_method_text"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="5dp"
                                            android:text="@string/cod_cash_on_delivery" />
                                    </LinearLayout>

                                    <View
                                        android:layout_width="match_parent"
                                        android:layout_height="2dp"
                                        android:background="?attr/dividerHorizontal" />

                                    <com.google.android.material.button.MaterialButton
                                        android:id="@+id/payment_method_button"
                                        style="@style/Widget.MaterialComponents.Button.TextButton"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="select or change payment method "
                                        android:textColor="@color/secondaryColor"
                                        android:visibility="gone"
                                        />
                                </LinearLayout>

                            </LinearLayout>


                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/dp_3"
                            android:background="@color/productGridBackgroundColor"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="2dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"


                                >

                                <TextView
                                    style="@style/TextAppearance.MaterialComponents.Headline6"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/dp_6"
                                    android:text="@string/review_your_order"
                                    android:textAllCaps="true" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="2dp"
                                    android:background="?attr/dividerHorizontal" />

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/order_recycleView"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:nestedScrollingEnabled="false" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>


                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/store_item_background"
                    android:elevation="12dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/dp_6"
                            android:text="@string/total"
                            android:textAllCaps="true"

                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/total_price"
                            style="@style/TextAppearance.MaterialComponents.Headline5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/dp_6"
                            android:textStyle="bold"
                            tools:text="$60,00" />
                    </LinearLayout>

                    <life.sabujak.roundedbutton.RoundedButton
                        android:id="@+id/place_order_button"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp_12"
                        android:padding="@dimen/dp_20"
                        android:text="@string/place_order"
                        android:textAllCaps="true"
                        app:buttonCornerRadius="10dp"
                        app:buttonGradientEndColor="#753a88"
                        app:buttonGradientStartColor="#cc2b5e" />

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>
    </RelativeLayout>
</layout>

